--- a/views/cart/cartvoucher.handlebars
+++ b/views/cart/cartvoucher.handlebars
@@ -18,7 +18,7 @@
 
 
 
-            //get sum of aall products        
+            //get sum of all products        
             var sum = arr.reduce((a, b) => a + b, 0)
             var weight_sum = s_arr.reduce((a, b) => a + b, 0)
 
