--- a/views/staff/manageCustOrder.handlebars
+++ b/views/staff/manageCustOrder.handlebars
@@ -26,7 +26,7 @@
 						</thead>
 						{{#each orders}}
 						<tr>
-							<td>&nbsp;{{id}}</td>
+							<td id="order_id">&nbsp;{{id}}</td>
 							<td>&nbsp;{{totalamount}}</td>
 							<td>&nbsp;{{status}}</td>
 							<td>&nbsp;{{payment}}</td>
