--- a/views/partials/_staffnav.handlebars
+++ b/views/partials/_staffnav.handlebars
@@ -97,7 +97,7 @@
                 <div id="collapseOrder" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Function:</h6>
-                        <a class="collapse-item" href="/staff/listOrderbyTime">Order List</a>
+                        <a class="collapse-item" href="/staff/listOrderbyTime">Order by Time</a>
                         <a class="collapse-item" href="/staff/listOrderbyCustomer">Order by Customer</a>
                     </div>
                 </div>
