--- a/views/staff/selectReason.handlebars
+++ b/views/staff/selectReason.handlebars
@@ -21,11 +21,12 @@
 
                     <!-- Page Heading -->
                     <div class="card-header py-3" style="background-color:#8BAD97;">
-                            <h5 class="m-0 font-weight-bold" style="color:white;">Select A Reason:  <a href="/staff/listOrderbyTime"
-                                    class="card-link mb-2"
-                                    style="color:#F1EDE5; float:right; padding-right:40px; font-size:large"><i class="fa-solid fa-arrow-left"></i> Back</a></h5>
+                        <h5 class="m-0 font-weight-bold" style="color:white;">Select A Reason: <a
+                                href="/staff/listOrderbyTime" class="card-link mb-2"
+                                style="color:#F1EDE5; float:right; padding-right:40px; font-size:large"><i
+                                    class="fa-solid fa-arrow-left"></i> Back</a></h5>
 
-                        </div>
+                    </div>
                     <br>
                     <div class="row">
                         <div class="col-10 col-md-8 col-sm-2">
@@ -69,7 +70,8 @@
                                             <td>{{category}}</td>
                                             <td>{{createdBy}}</td>
 
-                                            <td><a href="/payment/payment/{{id}}" class="btn btn-warning"><i class="fa-solid fa-envelope-circle-check"></i></i></a>
+                                            <td><a href="/payment/payment/{{id}}" class="btn btn-warning"><i
+                                                        class="fa-solid fa-envelope-circle-check"></i></i></a>
                                             </td>
                                         </tr>
                                         {{/each}}
@@ -86,7 +88,7 @@
 
 
                     </div>
-
+<p id="user_id" name="user_id">{{userId}}</p>
                 </div>
 
 
