--- a/views/partials/_staffnav.handlebars
+++ b/views/partials/_staffnav.handlebars
@@ -99,6 +99,7 @@
                         <h6 class="collapse-header">Function:</h6>
                         <a class="collapse-item" href="/staff/listOrderbyTime">Order by Time</a>
                         <a class="collapse-item" href="/staff/listOrderbyCustomer">Order by Customer</a>
+                        <a class="collapse-item" href="/staff/listReasons">Reason List</a>
                     </div>
                 </div>
             </li>
