--- a/views/staff/listCustOrder.handlebars
+++ b/views/staff/listCustOrder.handlebars
@@ -79,7 +79,7 @@
 													</button>
 												</div>
 												<div class="modal-body">
-													<p>Do you want to cancel this Order? This process cannot be undone.</p>
+													<p>Do you want to delete this Order Without Reason? It may make customer Unhappy!</p>
 												</div>
 												<div class="modal-footer justify-content-center">
 													<button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
