--- a/views/staff/selectReason1.handlebars
+++ b/views/staff/selectReason1.handlebars
@@ -22,7 +22,7 @@
                     <!-- Page Heading -->
                     <div class="card-header py-3" style="background-color:#8BAD97;">
                         <h5 class="m-0 font-weight-bold" style="color:white;">Select A Reason: <a
-                                href="/staff/listOrderbyTime" class="card-link mb-2"
+                                href="/staff/listOrderbyCustomer" class="card-link mb-2"
                                 style="color:#F1EDE5; float:right; padding-right:40px; font-size:large"><i
                                     class="fa-solid fa-arrow-left"></i> Back</a></h5>
 
